public class Main {

    public static void main(String[] args) {
        Tournament tournament = new Tournament();
        tournament.startTournament();

    }
}
